--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
       ></script>
       <script>
          $(document).ready(function () {
-            var socket = io();
+            var socket = io.connect('http://159.65.13.83:8000', {
+               path: '/socket.io',
+            });
 
             socket.on('message', (msg) => {
                $('.logs').append($('<li>').text(msg));
