--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       ></script>
       <script>
          $(document).ready(function () {
-            var socket = io.connect('http://localhost:3000', {
+            var socket = io.connect('http://62.171.157.134:3000', {
                path: '/socket.io',
             });
 
