--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="container" style="height: 100vh">
          <div class="d-flex justify-content-center py-4">
             <div class="col-md-6 bg-white rounded-lg px-4 py-3 shadow-sm">
-               <h2>Bot Sistem Lelang Group Whatsapp</h2>
+               <h2>Bot Sistem Lelang Grup Whatsapp</h2>
                <div id="app" class="card mt-4">
                   <div class="card-body mx-auto">
                      <img src="" alt="QR Code" id="qrcode" />
