--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
          rel="stylesheet"
          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       />
-      <title>Bot Sistem Lelang Group Whatsapp</title>
+      <title>Bot Sistem Lelang Grup Whatsapp</title>
    </head>
    <body class="bg-light" style="height: 100vh">
       <div class="container" style="height: 100vh">
@@ -37,7 +37,7 @@
                ></script>
                <script>
                   $(document).ready(function () {
-                     var socket = io.connect('http://localhost:3000', {
+                     var socket = io.connect('http://62.171.157.134:3000', {
                         path: '/socket.io',
                      });
 
